--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ baseurl: "/DataVisualization" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
     github: fastai
+    instagram: tatstix
 
 # Set this to true to get LaTeX math equation support
 use_math: true
